crates/linesmith/src/tui/snapshots/linesmith__tui__install_screen__tests__install_screen_not_installed.snap
---
source: crates/linesmith/src/tui/install_screen.rs
expression: "render_to_string(&s, 60, 14)"
---
          install to Claude Code — ✗ not installed          
                   i install · u uninstall                  
                                                            
▶ Install                                                   
  Uninstall                                                 
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
   Add the linesmith statusLine to ~/.claude/settings.json
