crates/linesmith/src/tui/snapshots/linesmith__tui__install_screen__tests__install_screen_other_tool_wide.snap
---
source: crates/linesmith/src/tui/install_screen.rs
expression: "render_to_string(&s, 100, 14)"
---
                   install to Claude Code — ⚠ statusLine points to "ccstatusline"                   
                                       i install · u uninstall                                      
                                                                                                    
▶ Install                                                                                           
  Uninstall                                                                                         
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                       Add the linesmith statusLine to ~/.claude/settings.json
